--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Acumin Pro';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Acumin Pro'),
+    url('/fonts/Acumin-RPro.woff') format('woff');
+}
+
+
+@font-face {
+  font-family: 'Acumin Pro Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Acumin Pro Italic'),
+    url('/fonts/Acumin-ItPro.woff') format('woff');
+}
+
+
+@font-face {
+  font-family: 'Acumin Pro Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Acumin Pro Bold'),
+    url('/fonts/Acumin-BdPro.woff') format('woff');
+}
+
+
+@font-face {
+  font-family: 'Acumin Pro Bold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Acumin Pro Bold Italic'),
+    url('/fonts/Acumin-BdItPro.woff') format('woff');
+}
+
+.image {
+  min-height: 100vh;
+}
+
+.bg-image {
+  background-image: url('/images/login.png');
+  background-size: cover;
+  background-position: center center;
+}
