--- a/src/index.css
+++ b/src/index.css
@@ -994,3 +994,11 @@ nav a:hover {
   height: 60px;
   width: 60px;
 }
+
+.info-change-password {
+  font: normal normal normal 15px Acumin Pro;
+  letter-spacing: 0px;
+  color: #2D2D2D;
+  opacity: 1;
+  margin-bottom: 20px;
+}
