--- a/src/index.css
+++ b/src/index.css
@@ -924,7 +924,7 @@ nav a:hover {
   min-height: 45px;
 }
 
-.filter-languaje {
+.filter-language {
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border: 1px solid #D5D5D5;
   border-radius: 3px;
