--- a/src/index.css
+++ b/src/index.css
@@ -1168,3 +1168,20 @@ nav a:hover {
   opacity: 0.5;
   cursor: auto;
 }
+
+.dropzone{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-width: 2px;
+  border-radius: 2px;
+  border-color: #eeeeee;
+  border-style: dashed;
+  background-color: #fafafa;
+  color: #bdbdbd;
+  outline: none;
+  transition: border .24s ease-in-out;
+  margin-bottom: 20px;
+}
