--- a/src/pages/Translators/styles.scss
+++ b/src/pages/Translators/styles.scss
@@ -42,4 +42,11 @@
         outline: none;
         box-shadow: none !important;
     }
+
+}
+
+.home-date{
+    .separator{
+        padding: 5px 10px;
+    }
 }
