--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ code {
 .userIconTra {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .active {
@@ -583,6 +584,9 @@ th {
 
 .image-profile {
   height: 92px;
+  width: 92px;
+  object-fit: cover;
+  border-radius: 50%;
   margin-bottom: 10px;
 }
 
